Add scalable folder structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,103 +1,3 @@
-<!-- TODO: remove the header or adjust it to your needs -->
-<header class="bg-indigo-600">
-  <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" aria-label="Top">
-    <div class="w-full py-6 flex items-center justify-between border-b border-indigo-500 lg:border-none">
-      <div class="flex items-center">
-        <a href="#">
-          <span class="sr-only">Workflow</span>
-          <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=white" alt="">
-        </a>
-        <div class="hidden ml-10 space-x-8 lg:block">
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Solutions </a>
-
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Pricing </a>
-
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Docs </a>
-
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Company </a>
-        </div>
-      </div>
-      <div class="ml-10 space-x-4">
-        <a href="#"
-           class="inline-block bg-indigo-500 py-2 px-4 border border-transparent rounded-md text-base font-medium text-white hover:bg-opacity-75">Sign
-          in</a>
-        <a href="#"
-           class="inline-block bg-white py-2 px-4 border border-transparent rounded-md text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign
-          up</a>
-      </div>
-    </div>
-    <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Solutions </a>
-
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Pricing </a>
-
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Docs </a>
-
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Company </a>
-    </div>
-  </nav>
-</header>
-
-<!-- Full-width fluid until the `md` breakpoint, then lock to container -->
-<div class="md:container md:mx-auto">
-  <div class="bg-white">
-    <div class="max-w-7xl mx-auto text-center py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
-      <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        <span class="block pb-10">Angular + Tailwind Template</span>
-        <span class="block">If the header and the footer look like the screenshots in "src/assets/img", Tailwind is set up and you can start coding.</span>
-      </h2>
-      <div class="mt-8 flex justify-center">
-        <div class="inline-flex rounded-md shadow">
-          <a href="#"
-             class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-            Hooray </a>
-        </div>
-        <div class="ml-3 inline-flex">
-          <a href="#"
-             class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200">
-            Cool </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- TODO: remove the footer or adjust it to your needs -->
-<div class="fixed inset-x-0 bottom-0">
-  <div class="bg-indigo-600">
-    <div class="max-w-7xl mx-auto py-3 px-3 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between flex-wrap">
-        <div class="w-0 flex-1 flex items-center">
-          <span class="flex p-2 rounded-lg bg-indigo-800">
-            <!-- Heroicon name: outline/speakerphone -->
-            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                 stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"/>
-            </svg>
-          </span>
-          <p class="ml-3 font-medium text-white truncate">
-            <span class="md:hidden"> We announced a new product! </span>
-            <span class="hidden md:inline"> Big news! We're excited to announce a brand new product. </span>
-          </p>
-        </div>
-        <div class="order-3 mt-2 flex-shrink-0 w-full sm:order-2 sm:mt-0 sm:w-auto">
-          <a href="#"
-             class="flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-600 bg-white hover:bg-indigo-50">
-            Learn more </a>
-        </div>
-        <div class="order-2 flex-shrink-0 sm:order-3 sm:ml-3">
-          <button type="button"
-                  class="-mr-1 flex p-2 rounded-md hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-white sm:-mr-2">
-            <span class="sr-only">Dismiss</span>
-            <!-- Heroicon name: outline/x -->
-            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                 stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+<app-home></app-home>
+<app-footer></app-footer>
