--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -12,14 +12,14 @@
             </svg>
           </span>
           <p class="ml-3 font-medium text-white truncate">
-            <span class="md:hidden"> We announced a new product! </span>
-            <span class="hidden md:inline"> Big news! We're excited to announce a brand new product. </span>
+            <span class="md:hidden"> {{ 'footer.text.short-notice' | translate }} </span>
+            <span class="hidden md:inline"> {{ 'footer.text.long-notice' | translate }} </span>
           </p>
         </div>
         <div class="order-3 mt-2 flex-shrink-0 w-full sm:order-2 sm:mt-0 sm:w-auto">
           <a href="#"
              class="flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-indigo-600 bg-white hover:bg-indigo-50">
-            Learn more </a>
+            {{ 'footer.button.learn-more' | translate }} </a>
         </div>
         <div class="order-2 flex-shrink-0 sm:order-3 sm:ml-3">
           <button type="button"
