--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,30 +3,36 @@
     <div class="w-full py-6 flex items-center justify-between border-b border-indigo-500 lg:border-none">
       <div class="flex items-center">
         <a href="#">
-          <span class="sr-only">Workflow</span>
+          <span class="sr-only">App</span>
           <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=white" alt="">
         </a>
         <div class="hidden ml-10 space-x-8 lg:block">
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Solutions </a>
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Pricing </a>
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Docs </a>
-          <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Company </a>
+          <a href="#"
+             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.solutions' | translate }} </a>
+          <a href="#"
+             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.pricing' | translate }} </a>
+          <a href="#"
+             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>
+          <a href="#"
+             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.company' | translate }} </a>
         </div>
       </div>
       <div class="ml-10 space-x-4">
         <a href="#"
-           class="inline-block bg-indigo-500 py-2 px-4 border border-transparent rounded-md text-base font-medium text-white hover:bg-opacity-75">Sign
-          in</a>
+           class="inline-block bg-indigo-500 py-2 px-4 border border-transparent rounded-md text-base font-medium text-white hover:bg-opacity-75">{{ 'header.button.sign-in' | translate }}</a>
         <a href="#"
-           class="inline-block bg-white py-2 px-4 border border-transparent rounded-md text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign
-          up</a>
+           class="inline-block bg-white py-2 px-4 border border-transparent rounded-md text-base font-medium text-indigo-600 hover:bg-indigo-50">{{ 'header.button.sign-up' | translate }}</a>
       </div>
     </div>
     <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Solutions </a>
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Pricing </a>
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Docs </a>
-      <a href="#" class="text-base font-medium text-white hover:text-indigo-50"> Company </a>
+      <a href="#"
+         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.solutions' | translate }} </a>
+      <a href="#"
+         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.pricing' | translate }} </a>
+      <a href="#"
+         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>
+      <a href="#"
+         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.company' | translate }} </a>
     </div>
   </nav>
 </header>
