--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" aria-label="Top">
     <div class="w-full py-6 flex items-center justify-between border-b border-indigo-500 lg:border-none">
       <div class="flex items-center">
-        <a href="#">
+        <a routerLink="/home" href="#">
           <span class="sr-only">App</span>
           <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=white" alt="">
         </a>
@@ -13,7 +13,7 @@
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.pricing' | translate }} </a>
           <a href="#"
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>
-          <a href="#"
+          <a routerLink="/about" href="#"
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.company' | translate }} </a>
         </div>
       </div>
