Remove gray background

--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="bg-white pt-8">
   <main>
     <div class="relative">
-      <div class="absolute inset-x-0 bottom-0 h-1/2 bg-gray-100"></div>
+      <div class="absolute inset-x-0 bottom-0 h-1/2"></div>
       <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
         <div class="relative shadow-xl sm:rounded-2xl sm:overflow-hidden">
           <div class="absolute inset-0">
