Update the screenshot file to verify if tailwind is working

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,12 +7,12 @@
           <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=white" alt="">
         </a>
         <div class="hidden ml-10 space-x-8 lg:block">
-          <a href="#"
+<!--          <a href="#"
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.solutions' | translate }} </a>
           <a href="#"
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.pricing' | translate }} </a>
           <a href="#"
-             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>
+             class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>-->
           <a routerLink="/about" href="#"
              class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.company' | translate }} </a>
         </div>
@@ -25,12 +25,12 @@
       </div>
     </div>
     <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
-      <a href="#"
+<!--      <a href="#"
          class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.solutions' | translate }} </a>
       <a href="#"
          class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.pricing' | translate }} </a>
       <a href="#"
-         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>
+         class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.docs' | translate }} </a>-->
       <a href="#"
          class="text-base font-medium text-white hover:text-indigo-50"> {{ 'header.menu.company' | translate }} </a>
     </div>
