--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -29,19 +29,29 @@
         <p class="mt-4 text-lg text-gray-500">{{'home.ngrx.description' | translate}}</p>
       </div>
       <div class="max-w-3xl mx-auto pt-6">
+        <p
+          class="block text-xl font-medium text-gray-700 py-2">{{'home.ngrx.store' | translate}}{{userInput$ | async}}</p>
         <div>
           <div class="mt-1">
-          <textarea [(ngModel)]="userInput" (ngModelChange)="hideUserInput()" rows="4"
+          <textarea rows="4" [(ngModel)]="userInput" (ngModelChange)="hideUserInput()"
                     class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full border-gray-300 rounded-md"></textarea>
             <div class="mt-8 flex justify-center">
-              <button type="button" (click)="storeUserInput()"
-                      class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-indigo-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                {{'home.ngrx.button' | translate}}
-              </button>
+              <div class="inline-flex rounded-md shadow">
+                <button type="button" (click)="storeUserInput(userInput!)"
+                        class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-indigo-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  {{'home.ngrx.button.store' | translate}}
+                </button>
+              </div>
+              <div class="ml-3 inline-flex">
+                <button type="button" (click)="resetStore()"
+                        class="inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-indigo-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  {{'home.ngrx.button.reset' | translate}}
+                </button>
+              </div>
             </div>
           </div>
           <p *ngIf="displayUserInput"
-             class="block text-xl font-medium text-gray-700 pt-6">{{'home.ngrx.message' | translate}}{{userInput}}</p>
+             class="block text-xl font-medium text-gray-700 pt-6">{{'home.ngrx.message' | translate}}{{userInput$ | async}}</p>
         </div>
       </div>
     </div>
